# moneyctl

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  build.sh  moneyctl.py  moneyctl.rpm.spec  pyproject.toml  tasks.py
misc/completions/: moneyctl.fish
misc/journal_example/: config.bean
misc/journal_example/accounts/2022/: 2022-01-01.bean  2022-03-25.bean  2022-05-10.bean
misc/journal_example/commodities/2022/: 2022-01-01.bean
misc/journal_example/prices/2022/: 2022-01-01.bean
misc/journal_example/templates/: food-shop.yml  salary.yml
misc/journal_example/transactions/2022/: 2022-01-01.bean  2022-03-25.bean  2022-05-10.bean
misc/wrapper/: moneyctl.fish
moneyctl/: __init__.py  __main__.py  beancount_wrapper.py  cli.py  journal.py  legacy.py  report.py
tests/: test_moneyctl.py
