[tool.poetry]
name = "moneyctl"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beancount = "^2.3.6"
investiny = "^0.7.2"
click = "^8.1.7"
pandas = "^2.2.0"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
